# neverlight-mail-core

./: CLAUDE.md  Cargo.toml  README.md  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: cache.md  code-conventions.md  jmap.md  plan.md  porting-guide.md
src/: backfill.rs  client.rs  config.rs  discovery.rs  email.rs  envelope.rs  imap.rs  jmap.rs  keyring.rs  lib.rs  mailbox.rs  mime.rs  models.rs  parse.rs  push.rs  session.rs  setup.rs  submit.rs  sync.rs  types.rs
src/email/: body.rs  flags.rs  mod.rs  query.rs
src/oauth/: discovery.rs  exchange.rs  flow.rs  mod.rs  redirect.rs  registration.rs  types.rs
src/store/: backfill_queries.rs  body_queries.rs  commands.rs  dispatch.rs  flag_queries.rs  folder_queries.rs  handle.rs  message_queries.rs  mod.rs  queries.rs  schema.rs  search_queries.rs
tests/: flags_move_delete.rs  jmap_integration.rs  mailbox_query_body.rs  send_identity.rs  sync_push_search.rs
tests/common/: mod.rs
tests/fixtures/: dentist_marketing_html.txt
