[package]
name = "neverlight-mail-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "JMAP-native headless email engine"
repository = "https://github.com/jstelzer/neverlight-mail-core"
homepage = "https://github.com/jstelzer/neverlight-mail-core"
documentation = "https://docs.rs/neverlight-mail-core"

[dependencies]
# JMAP HTTP transport
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# RFC 5322 message parsing (body extraction, MIME tree walking)
mail-parser = "0.9"

# HTML rendering (privacy-safe sanitization)
html-safe-md = { version = "0.0.2", path = "../html-safe-md" }

# Local cache
rusqlite = { version = "0.37", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization (JMAP is JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Credential storage
keyring = { version = "3", features = ["sync-secret-service", "apple-native"] }

# XDG directory resolution
dirs = "6"

# Open URLs in browser
open = "5"

# UUID generation for account IDs
uuid = { version = "1", features = ["v4"] }

# PKCE + OAuth
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"

# Logging
log = "0.4"
thiserror = "2.0.18"
